--- a/app/src/main/res/layout/activity_update_tools.xml
+++ b/app/src/main/res/layout/activity_update_tools.xml
@@ -15,8 +15,7 @@
         android:orientation="horizontal">
 
         <ImageView
-
-            android:id="@+id/imageViewanh1"
+            android:id="@+id/imageViewanh11"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -24,7 +23,7 @@
             android:background="@drawable/ic_launcher_background" />
 
         <ImageView
-            android:id="@+id/imageViewanh2"
+            android:id="@+id/imageViewanh21"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -32,7 +31,7 @@
             android:background="@drawable/ic_launcher_background" />
 
         <ImageView
-            android:id="@+id/imageViewanh3"
+            android:id="@+id/imageViewanh31"
             android:layout_width="100dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
@@ -48,7 +47,7 @@
         android:weightSum="7">
 
         <TextView
-            android:id="@+id/textView14"
+            android:id="@+id/textView141"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -57,7 +56,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/edtname"
+            android:id="@+id/edtname1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
@@ -80,7 +79,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/edtpn"
+            android:id="@+id/edtpn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
@@ -104,7 +103,7 @@
             android:textStyle="bold" />
 
         <EditText
-            android:id="@+id/edtsn"
+            android:id="@+id/edtsn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
@@ -120,19 +119,19 @@
 
         <Button
 
-            android:id="@+id/btnthem"
+            android:id="@+id/btntupdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="5"
-            android:text="THEM" />
+            android:text="update" />
 
         <Button
-            android:id="@+id/btnhuy"
+            android:id="@+id/btncancel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="5"
-            android:text="HUY" />
+            android:text="cancel" />
     </LinearLayout>
 
 
