--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -4,12 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.bazoka.demojson.MainActivity">
+    tools:context="com.example.bazoka.demojson.Main2Activity">
 
-    <ListView
-        android:id="@+id/listviewtools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-    </ListView>
 </android.support.constraint.ConstraintLayout>
