--- a/app/src/main/res/layout/tools.xml
+++ b/app/src/main/res/layout/tools.xml
@@ -8,17 +8,19 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="81dp"
-        android:layout_height="81dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
+        android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@mipmap/ic_launcher" />
 
     <TextView
         android:textStyle="bold"
-        android:textSize="17sp"
+        android:textSize="15sp"
         android:id="@+id/textView"
         android:layout_width="50dp"
         android:layout_height="25dp"
@@ -26,7 +28,7 @@
         android:layout_marginTop="8dp"
         android:text="NAME:"
         app:layout_constraintStart_toEndOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/imageView" />
 
     <TextView
         android:textStyle="bold"
@@ -42,14 +44,14 @@
 
     <TextView
 
-        android:textStyle="bold"
-        android:textSize="15sp"
         android:id="@+id/textView3"
         android:layout_width="50dp"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="SN:"
+        android:textSize="15sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
@@ -62,7 +64,7 @@
         android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@id/imageView" />
 
     <TextView
         android:textSize="15sp"
@@ -76,13 +78,30 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewName" />
 
     <TextView
-        android:textSize="15sp"
         android:id="@+id/textViewSN"
         android:layout_width="wrap_content"
         android:layout_height="20dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="TextView"
+        android:textSize="15sp"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/textViewPRN" />
+
+    <ImageView
+        android:id="@+id/imageViewEdit"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintEnd_toStartOf="@+id/imageViewDelete"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@android:drawable/ic_menu_edit" />
+
+    <ImageView
+        android:id="@+id/imageViewDelete"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView"
+        app:srcCompat="@android:drawable/ic_delete" />
 </android.support.constraint.ConstraintLayout>
